prevent blue highlight on mobile devvice

--- a/backend/static/css/base.css
+++ b/backend/static/css/base.css
@@ -4,6 +4,7 @@ body {
     padding: 0;
     margin: 0;
     width: 100%;
+    -webkit-tap-highlight-color: transparent;
 }
 
 .pager-body {
